[SYNCOPE-1889] fix pageble